--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,6 +1,7 @@
 extends ../../layouts/default.pug
-
+include ../../mixins/alert.pug
 block main
+    +alert-success(5000)
     section#home.home
       .content
         h3
